--- a/example/two-column.css
+++ b/example/two-column.css
@@ -1,82 +1,68 @@
-body,
-html {
-	margin:0;
-	padding:0;
-	color:#000;
-	background:#a7a09a;
-	font-family: 'Consolas', 'Verdana';
+body, html {
+  margin: 0;
+  padding: 0;
+  color: #000;
+  background: #a7a09a;
+  font-family: 'Consolas', 'Verdana';
 }
-
 #wrap {
-	width:750px;
-	margin:0 auto;
-	background:#99c;
+  width: 750px;
+  margin: 0 auto;
+  background: #99c;
 }
-
 #header {
-	padding:5px 10px;
-	background:#ddd;
+  padding: 5px 10px;
+  background: #ddd;
 }
-
 h1 {
-	margin:0;
+  margin: 0;
 }
-
 #nav {
-	padding:5px 10px;
-	background:#c99;
+  padding: 5px 10px;
+  background: #c99;
 }
-
 #nav ul {
-	margin:0;
-	padding:0;
-	list-style:none;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 #nav li {
-	display:inline;
-	margin:0;
-	padding:0;
+  display: inline;
+  margin: 0;
+  padding: 0;
 }
-
 #main {
-	float:left;
-	width:480px;
-	padding:10px;
-	background:#9c9;
+  float: left;
+  width: 480px;
+  padding: 10px;
+  background: #9c9;
 }
-
 h2 {
-	margin:0 0 1em;
+  margin: 0 0 1em;
 }
-
 #sidebar {
-	float:right;
-	width:250px;
-	background:#99c;
+  float: right;
+  width: 250px;
+  background: #99c;
 }
-
 #footer {
-	clear:both;
-	background:#cc9;
+  clear: both;
+  background: #cc9;
 }
-
 #sidebar {
-	float:right;
-	width:230px;
-	padding:10px;
-	background:#99c;
+  float: right;
+  width: 230px;
+  padding: 10px;
+  background: #99c;
 }
-
 #footer {
-	clear:both;
-	padding:5px 10px;
-	background:#cc9;
+  clear: both;
+  padding: 5px 10px;
+  background: #cc9;
 }
-
 * html #footer {
-	height:1px;
+  height: 1px;
 }
-
 #footer p {
-	margin:0;
+  margin: 0;
 }
